# api/swagger.yaml
@@ -350,6 +350,67 @@ paths:
             $ref: "#/definitions/GetTimezonesResponse"
       security:
       - Apikey: []
+  /validate/address/geocode:
+    post:
+      tags:
+      - "Address"
+      summary: "Geocode a street address into latitude and longitude"
+      description: "Geocodes a street address into latitude and longitude."
+      operationId: "Address_Geocode"
+      consumes:
+      - "application/json"
+      - "text/json"
+      produces:
+      - "application/json"
+      - "text/json"
+      - "application/xml"
+      - "text/xml"
+      parameters:
+      - in: "body"
+        name: "input"
+        description: "Input parse request"
+        required: true
+        schema:
+          $ref: "#/definitions/ValidateAddressRequest"
+        x-exportParamName: "Input"
+      responses:
+        "200":
+          description: "OK"
+          schema:
+            $ref: "#/definitions/ValidateAddressResponse"
+      security:
+      - Apikey: []
+  /validate/address/geocode/reverse:
+    post:
+      tags:
+      - "Address"
+      summary: "Reverse geocode a lattitude and longitude into an address"
+      description: "Converts lattitude and longitude coordinates into an address through\
+        \ reverse-geocoding."
+      operationId: "Address_ReverseGeocodeAddress"
+      consumes:
+      - "application/json"
+      - "text/json"
+      produces:
+      - "application/json"
+      - "text/json"
+      - "application/xml"
+      - "text/xml"
+      parameters:
+      - in: "body"
+        name: "input"
+        description: "Input reverse geocoding request"
+        required: true
+        schema:
+          $ref: "#/definitions/ReverseGeocodeAddressRequest"
+        x-exportParamName: "Input"
+      responses:
+        "200":
+          description: "OK"
+          schema:
+            $ref: "#/definitions/ReverseGeocodeAddressResponse"
+      security:
+      - Apikey: []
   /validate/domain/check:
     post:
       tags:
@@ -389,8 +450,9 @@ paths:
       tags:
       - "Domain"
       summary: "Validate a domain name's quality score"
-      description: "Check the quality of a domain name.  Higher quality scores indicate\
-        \ more trust and authority in the domain name."
+      description: "Check the quality of a domain name.  Supports over 9 million domain\
+        \ names.  Higher quality scores indicate more trust and authority in the domain\
+        \ name, with values ranging from 0.0 (low quality) to 10.0 (maximum quality)."
       operationId: "Domain_QualityScore"
       consumes:
       - "text/javascript"
@@ -1518,6 +1580,57 @@ definitions:
       CountryFullName: "CountryFullName"
       ThreeLetterCode: "ThreeLetterCode"
       ISOTwoLetterCode: "ISOTwoLetterCode"
+      Successful: true
+  ReverseGeocodeAddressRequest:
+    type: "object"
+    properties:
+      Latitude:
+        type: "number"
+        format: "double"
+        description: "Latitude coordinate in WGS84 format"
+      Longitude:
+        type: "number"
+        format: "double"
+        description: "Longitude coordinate in WGS84 format"
+    description: "Request to reverse geocode a Street Address"
+    example:
+      Latitude: 0.8008281904610115
+      Longitude: 6.027456183070403
+  ReverseGeocodeAddressResponse:
+    type: "object"
+    properties:
+      Successful:
+        type: "boolean"
+        description: "True if the address operation was successful, false otherwise"
+      StreetAddress:
+        type: "string"
+        description: "Street address to validate, such as '2950 Buskirk Ave.'"
+      City:
+        type: "string"
+        description: "City part of the addrerss to validate, such as 'Walnut Creek'"
+      StateOrProvince:
+        type: "string"
+        description: "State or province of the address to validate, such as 'CA' or\
+          \ 'California'"
+      PostalCode:
+        type: "string"
+        description: "Zip code or postal code of the address to validate, such as\
+          \ '94597'"
+      CountryFullName:
+        type: "string"
+        description: "Name of the country, such as 'United States'.  Global countries\
+          \ are supported."
+      CountryCode:
+        type: "string"
+        description: "Three-letter ISO 3166-1 country code"
+    description: "Result of reverse geocoding a street address"
+    example:
+      StreetAddress: "StreetAddress"
+      StateOrProvince: "StateOrProvince"
+      PostalCode: "PostalCode"
+      CountryFullName: "CountryFullName"
+      City: "City"
+      CountryCode: "CountryCode"
       Successful: true
   CheckResponse:
     type: "object"
